Changed colours, fixed up alignment

--- a/components/Header.css
+++ b/components/Header.css
@@ -77,6 +77,7 @@ input.search-box {
   margin: 0.5em;
   border-radius: 15px;
   border: none;
-  background-color: #457b9d;
+  /* background-color: #457b9d; */
+  background-color: #e63946;
   color: white;
 }
