--- a/components/Main/Main.css
+++ b/components/Main/Main.css
@@ -67,7 +67,7 @@
 }
 
 .container {
-  padding: 1em;
+  padding: 1.1em;
 }
 
 .announcement-card {
@@ -77,8 +77,8 @@
 }
 
 .container > p {
-  padding: 1.5em;
-  line-height: 1.5;
+  padding: 1em;
+  line-height: 1.7;
   display: block;
 }
 
